tests/ui/indexing/index-with-wrong-type.stderr
error[E0308]: mismatched types
  --> $DIR/index-with-wrong-type.rs:27:7
   |
LL |     H["?"].f();
   |       ^^^ expected `u32`, found `&str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
